fix: theming secondary color contrast

--- a/src/assets/styles/vars.sass
+++ b/src/assets/styles/vars.sass
@@ -130,7 +130,7 @@ body[data-theme='LIGHT']
   --theme-blok-showlines: transparent
   --theme-blok-solid: #E8E7E3
   --theme-type: black
-  --theme-type-inactive: hsla(0, 0%, 0%, 0.33)
+  --theme-type-inactive: hsla(0, 0%, 0%, 0.45)
   --theme-type-contrast: #E8E7E3
   --cursor-color-bg: black
   --cursor-color-blok: black
@@ -144,7 +144,7 @@ body[data-theme='KUSAMA']
   --theme-blok-showlines: black
   --theme-blok-solid: black
   --theme-type: #DA4B9A
-  --theme-type-inactive: hsla(327, 66%, 57%, 0.5)
+  --theme-type-inactive: hsla(327, 66%, 57%, 0.6)
   --theme-type-contrast: #FFFFFF
   --cursor-color-bg: #DA4B9A
   --cursor-color-blok: #DA4B9A
@@ -162,7 +162,7 @@ body[data-theme='SEGMENTS']
   --theme-blok-showlines: var(--color-dark-bg)
   --theme-blok-solid: var(--theme-blok)
   --theme-type: var(--color-dark-type)
-  --theme-type-inactive: var(--color-dark-type-secondary)
+  --theme-type-inactive: hsla(0, 0%, 100%, 0.5)
   --theme-type-contrast: black
   --border-color: white
   --cursor-color-bg: white
@@ -176,7 +176,7 @@ body[data-theme='SPACE']
   --theme-blok-showlines: black
   --theme-blok-solid: black
   --theme-type: #FFFFFF
-  --theme-type-inactive: hsla(0, 0%, 100%, 0.45)
+  --theme-type-inactive: hsla(0, 0%, 100%, 0.5)
   --theme-type-contrast: black
   --border-color: #FFFFFF
   --cursor-color-bg: #FFFFFF
@@ -193,7 +193,7 @@ body[data-theme='KERMIT']
   --theme-bg-gradient: 0.05
   --theme-blok-gradient: 0.1
   --theme-type: black
-  --theme-type-inactive: hsla(0, 0%, 0%, 0.4)
+  --theme-type-inactive: hsla(0, 0%, 0%, 0.45)
   --theme-type-contrast: white
   --cursor-color-bg: white
   --cursor-color-blok: black
@@ -221,7 +221,7 @@ body[data-theme='TRON']
   --theme-blok-showlines: transparent
   --theme-blok-solid: var(--color-black)
   --theme-type: hsla(172, 100%, 75%, 1)
-  --theme-type-inactive: hsla(172, 100%, 75%, 0.4)
+  --theme-type-inactive: hsla(172, 100%, 75%, 0.5)
   --theme-type-contrast: black
   --border-color: hsla(172, 100%, 75%, 1)
   --slider-indicator: hsla(172, 100%, 75%, 1)
@@ -233,7 +233,7 @@ body[data-theme='NIGHT']
   --theme-blok-showlines: var(--theme-blok)
   --theme-blok-solid: var(--color-black)
   --theme-type: var(--color-red)
-  --theme-type-inactive: hsla(0, 100%, 50%, 0.5)
+  --theme-type-inactive: hsla(0, 100%, 50%, 0.6)
   --theme-type-contrast: black
   --border-color: var(--color-red)
   --cursor-color-bg: var(--color-red)
@@ -247,7 +247,7 @@ body[data-theme='BLACK']
   --theme-blok-showlines: var(--theme-blok)
   --theme-blok-solid: var(--theme-blok)
   --theme-type: var(--color-black)
-  --theme-type-inactive: var(--color-grey-inactive)
+  --theme-type-inactive: hsla(0, 0%, 100%, 0.5)
   --theme-type-contrast: white
 
 body[data-theme='RADIANT']
@@ -256,7 +256,7 @@ body[data-theme='RADIANT']
   --theme-blok-showlines: #DAD9E0
   --theme-blok-solid: var(--theme-blok)
   --theme-type: #FA5942
-  --theme-type-inactive: hsla(7, 95%, 62%, 0.5)
+  --theme-type-inactive: hsla(7, 95%, 62%, 0.6)
   --theme-type-contrast: white
   --theme-rotatingLines-bg: 1
   --border-color: #FA5942
@@ -273,7 +273,6 @@ body[data-theme='SKY']
   --theme-blok-solid: transparent
   --theme-blok-showlines: transparent
   --theme-type: white
-  --theme-type-inactive: hsla(0, 0%, 0%, 0.4)
   --theme-type-inactive: hsla(0, 0%, 100%, 1)
   --theme-type-contrast: black
   --theme-rotatingLines-bg: 1
